# tastvare

./: Cargo.toml  README.md  bacon.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml
app/: Cargo.toml
app/src/: main.rs  matrix.rs  serial.rs  usb.rs
app/src/layout/: mod.rs  six.rs  sixbysix.rs  thirtyfour.rs  twelve.rs
app/src/layout/six/: microkeys.rs
app/src/layout/thirtyfour/: ergonomisk.rs
app/src/layout/twelve/: tinykeys.rs
app/src/light/: mod.rs  ws2812.rs
lib/tast/: Cargo.toml
lib/tast/src/: engine.rs  lib.rs  protocol.rs
lib/tast/src/layout/: mod.rs  sixbysix.rs
src/: engine.rs  main.rs  protocol.rs  serial.rs  usb.rs
src/keymap/: mod.rs
src/layout/: mod.rs  sixbysix.rs
src/layout/sixbysix/: tinykeys.rs
tast/src/: engine.rs  lib.rs  protocol.rs  report.rs  serial.rs
tast/src/keymap/: colemak.rs  ergonomisk.rs  microkeys.rs  mod.rs  qwerty.rs  tinykeys.rs
tast/src/layout/: mod.rs  six.rs  sixbysix.rs  twelve.rs
