[package]
edition = "2021"
name = "tastvare"
version = "0.1.0"

[[bin]]
name = "tastvare"

[features]
default = ["left", "usb", "uartrx"]
left = []
usb = []
uartrx = []
uarttx = []

[dependencies]
# cortex-m = { version = "0.7", features = ["critical-section"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
#rp-pico = "0.7"
sparkfun-pro-micro-rp2040 = "0.6.0"
usbd-human-interface-device = "0.4.3"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version = "0.8", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
usb-device = "0.2.9"
fugit = "0.3.7"
smart-leds = "0.3.0"
ws2812-pio = "0.6.0"
bitflags = "2.3.3"
frunk = { version = "0.4.2", default-features = false }

[dependencies.tast]
version = "0.1.0"
path = "../tast"
features = ["left"]

